[gd_scene load_steps=4 format=3 uid="uid://bt6lpd2kqqd5d"]

[ext_resource type="Script" uid="uid://dtd2d2nr5a5n2" path="res://scripts/Game.gd" id="1_wrapper"]
[ext_resource type="Texture2D" uid="uid://cighw5yua3ygf" path="res://addons/cheddaboards/icon.png" id="2_logo"]
[ext_resource type="Theme" uid="uid://cg1jdv7rfyi22" path="res://themes/Buttons.tres" id="3_theme"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wrapper")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="GameContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="HUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="TopBar" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_constants/separation = 40

[node name="ScorePanel" type="PanelContainer" parent="HUD/TopBar"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="HUD/TopBar/ScorePanel"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="HUD/TopBar/ScorePanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="ComboLabel" type="Label" parent="HUD/TopBar/ScorePanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "Combo: x1"

[node name="TimePanel" type="PanelContainer" parent="HUD/TopBar"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="TimeLabel" type="Label" parent="HUD/TopBar/TimePanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsPanel" type="PanelContainer" parent="HUD/TopBar"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="HUD/TopBar/StatsPanel"]
layout_mode = 2

[node name="Stat1Label" type="Label" parent="HUD/TopBar/StatsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Level: 1"
horizontal_alignment = 2

[node name="Stat2Label" type="Label" parent="HUD/TopBar/StatsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Misses: 0"
horizontal_alignment = 2

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -70.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="CheddaLogo" type="TextureRect" parent="BottomBar"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("2_logo")
expand_mode = 1
stretch_mode = 5

[node name="PoweredBy" type="Label" parent="BottomBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "Powered by CheddaBoards"
vertical_alignment = 1

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Game Over!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Final Score: 0"
horizontal_alignment = 1

[node name="StatsContainer" type="HBoxContainer" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Stat1Result" type="Label" parent="GameOverPanel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Level: 1"

[node name="Spacer" type="Control" parent="GameOverPanel/MarginContainer/VBoxContainer/StatsContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Stat2Result" type="Label" parent="GameOverPanel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Accuracy: 0%"

[node name="ExtraStatLabel" type="Label" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "Max Combo: x1"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayAgainButton" type="Button" parent="GameOverPanel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
theme = ExtResource("3_theme")
theme_override_font_sizes/font_size = 20
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="GameOverPanel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
theme = ExtResource("3_theme")
theme_override_font_sizes/font_size = 20
text = "Main Menu"

[node name="LeaderboardButton" type="Button" parent="GameOverPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "View Leaderboard"
